--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -96,7 +96,7 @@
 
   <div class="container-fluid shoppingcart cart">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-sm-8">
             <h2 id="cart_title">Shopping Cart</h2>
             <div class="col align-self-center text-muted">[[${totQuantity + " items"}]]</div>
             
@@ -120,43 +120,56 @@
                 </tr>
               </thead>
               <tbody>
+                <form method="POST" action="/update_cart_quantity">
                 <th:block th:each="cartItem: ${cartItems}">
                     <tr th:with="product = ${cartItem.getProduct()}">
                       <th scope="row" class="border-0">
                         <div class="p-2">
                           <div class="ml-3 d-inline-block align-middle">
+
                             <h5> <a class="mb-0 text-dark d-inline-block align-middle text-muted" th:href="@{${'/view_data/' + cartItem.getProduct().getData_asset_id()}}">[[${product.getAssetname()}]]</a></h5>
                             <p class="text-muted text-dark">[[${product.getAssetdesc()}]]</p>
                           </div>
                         </div>
-                      </th>
-                      <td class="border-0 align-middle text-muted"><strong>[[${cartItem.getQuantity()}]]x&euro;[[${product.getAssetcost()}]] = &euro;[[${cartItem.getItemCostByQuantity()}]]</strong></td>
+
+
+                      <td class="border-0 align-middle text-muted"><strong>[[${cartItem.getQuantity()}]]x&euro;[[${product.getAssetcost()}]] <br>= &euro;
+                       <span class="productSubtotal">[[${cartItem.getItemCostByQuantity()}]]</span></strong></td>
                       
                       <td class="border-0 text-muted">
                         <span th:replace="quantity_control :: quantity_control(${cartItem.getQuantity()}, ${cartItem.getProduct().getData_asset_id()})"></span>
                       </td>
                       
                       <td class="border-0 align-middle text-muted"><a href="#" class="text-dark"><a class="fa fa-trash" href=""></i></a></td>
+
                     </tr>
-                </th:block>    
+
+                    <input type="hidden" name="productID" th:value="${cartItem.getProduct().getData_asset_id()}">
+                    
+                </th:block> 
+                
               </tbody>
             </table>
 
             <div th:if="${#lists.isEmpty(cartItems)}">
                 <h4 class="text-muted text-dark">Your have not chosen any products yet.</h4>
             </div>
+                <button type="submit">Update Cart</button>
+            </form>   
+                
+                
           </div>
           <!-- End -->
          </div>   
 
-            <div class="col-md-4 cart_payment">
+            <div class="col-sm-4 cart_payment">
                 <h2>Payment details</h2>
                 <p class="text-muted cart_subscript">
                 You are a few steps away from making a difference for your company. Enter your payment details below. </p>
                 <p>
                     <div class="row" th:unless="${#lists.isEmpty(cartItems)}">
                         <div class="col" style="padding-left:0;">[[${totQuantity + " ITEMS"}]]</div>
-                        <div class="col text-right">&euro;[[${totPrice}]]</div>
+                        <div class="col text-right" id="totalAmount"></div>
                     </div> 
                     <div class="col-12">
                         <div class="d-flex flex-column">
@@ -211,7 +224,7 @@
         <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
         <script src="/js/custom.js" type="text/javascript"></script>
         <script type="text/javascript" src="/js/wow.js"></script> 
-        <script src="/js/quantity_control.js"></script>
+        <script src="/js/shopping_cart.js"></script>
         </body>
 
         </html>
