--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -32,121 +32,127 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<![endif]-->
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-<!-- Navigation -->
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand page-scroll" href="/">
-                <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
-            </a>
-        </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="/">
+                    <i class="fa fa-cubes"></i>  <span class="light">Anansi</span> Data
+                </a>
+            </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-            <ul class="nav navbar-nav">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#datasets">Datasets</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#team">Our team</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/logout">Log Out</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/viewallorders">View Orders</a>
-                </li>
-            </ul>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#datasets">Datasets</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#team">Our team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/logout">Log Out</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/viewallorders">View Orders</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
+        <!-- /.container -->
+    </nav>
 
-<!-- Intro Header -->
-<div class="jumbotron jumbotron-billboard">
-    <div class="img"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center intro-body">
-                <h2 class="brand-heading-secondary">Add New User: Manual Method</h2>
-                <a href="/adminportal" class="btn btn-default btn-lg">Back to Admin Portal</a>
+    <!-- Intro Header -->
+    <div class="jumbotron jumbotron-billboard">
+        <div class="img"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center intro-body">
+                    <h2 class="brand-heading-secondary">Add New User: Manual Method</h2>
+                    <a href="/adminportal" class="btn btn-default btn-lg">Back to Admin Portal</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="col-md data-order-section">
-    <div class="login">
-        <form method="POST" action="/add_new_user_manual">
-            <input type="text" name="username" placeholder="User name" required="">
-            <input type="password" name="password" placeholder="Password" required="">
-            <input type="text" name="name" placeholder="Full Name" required="">
-            <input type="email" name="email" placeholder="Email" required="">
-            <select name="admin">
-                <option value="false">Standard User</option>
-                <option value="true">Admin User</option>
-            </select>
-            <select name="active">
-                <option value="true">Active</option>
-                <option value="false">Not Active</option>
-            </select>
-            <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${usedusername}">
-                Username is already taken. Please try again.
-            </p>
-            <button type="submit">Add User</button>
-        </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-md data-order-section">
+                <div class="login">
+                    <form method="POST" action="/add_new_user_manual">
+                        <input type="text" name="username" placeholder="User name" required="">
+                        <input type="password" name="password" placeholder="Password" required="">
+                        <input type="text" name="name" placeholder="Full Name" required="">
+                        <input type="email" name="email" placeholder="Email" required="">
+                        <div class="text-center center-block">
+                            <select name="admin">
+                                <option value="false">Standard User</option>
+                                <option value="true">Admin User</option>
+                            </select>
+                            <select name="active">
+                                <option value="true">Active</option>
+                                <option value="false">Not Active</option>
+                            </select>
+                        </div>
+                        <p style="color: red; font-size: 0.75em; text-align: center;" th:if="${usedusername}">
+                            Username is already taken. Please try again.
+                        </p>
+                        <button type="submit">Add User</button>
+                    </form>
+                </div>
+            </div>
+        </div>    
+
+
     </div>
 
 
-</div>
 
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; Anansi 2022</p>
+        </div>
+    </footer>
 
+    <!-- jQuery -->
+    <script src="/js/jquery.js"></script>
 
-<!-- Footer -->
-<footer>
-    <div class="container text-center">
-        <p>Copyright &copy; Anansi 2022</p>
-    </div>
-</footer>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/js/bootstrap.min.js"></script>
 
-<!-- jQuery -->
-<script src="/js/jquery.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="/js/jquery.easing.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="/js/bootstrap.min.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="/js/grayscale.js"></script>
+    <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-<!-- Plugin JavaScript -->
-<script src="/js/jquery.easing.min.js"></script>
+        <script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
+        <script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+        <script src="/js/custom.js" type="text/javascript"></script>
+        <script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="/js/wow.js"></script>
 
-<!-- Custom Theme JavaScript -->
-<script src="/js/grayscale.js"></script>
-<!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
+    </body>
 
-<script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
-<script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="/js/custom.js" type="text/javascript"></script>
-<script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="/js/wow.js"></script>
-
-</body>
-
-</html>
+    </html>
